Mon Dec 13 23:53:20 1999  George Lebl <jirka@5z.com>

	* gnome-mime-info.c: current_lang is a list of languages.  Also
	  we store the previous key and it's language level when reading.
	  (remove_this_key) removed this function as it is replaced by
	  using g_hash_table_lookup_extended where we don't need to
	  remove/readd, but just readd with the old key
	  (context_add_key) take an extra 'lang' argument which is the
	  language of the current key/value or NULL.  If the current 'lang'
	  is higher then the previous key's lang level we replace the
	  previous key with this key, otherwise we just add the key/value
	  (load_mime_type_info_from) keep track of lang just like we do
	  of 'key'
	  (gnome_mime_flag) take the 'key' as an argument and do the right
	  thing
	  (gnome_mime_copiousoutput,gnome_mime_needsterminal) call the
	  gnome_mime_flag with the 'key'

	* gnome-mime-info.h: gnome_mime_nametemplate removed from the
	  header as it was not actually implemented anywhere

Sun Dec 05 01:32:35 1999  George Lebl <jirka@5z.com>

	* gnome-dentry.c: fix the quoting, now we don't quote the exec vector
	  from the dentry as this is the expected behaviour, but we do quote
	  the arguments passed to gnome_desktop_entry_launch_with_args so
	  that we work with filenames with spaces.  This will completely
	  fix #4010.

Fri Dec 03 21:23:56 1999  George Lebl <jirka@5z.com>

	* gnome-dentry.c: fix a segfault in join_with_quotes, fixes #4010

1999-11-11  Jacob Berkman  <jberkman@andrew.cmu.edu>

	* gnome-config.c (gnome_config_make_vector): correctly
	handle the "a \b c" case (escaped character between 2
	spaces)
	(gnome_config_make_vector): george also suggested this
	fix

	Fixes bug #3475

1999-10-27  Elliot Lee  <sopwith@redhat.com>
	* gnome-util.c: Use g_strdup not strdup.

1999-10-06  Owen Taylor  <otaylor@redhat.com>

	* gnome-config.c (access_config_extended): Always refill
	the cache with valid values immediately after invalidating